# yt_downloader

./: .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
backend/: README.md  build.spec  main.py  pyproject.toml
backend/models/: file_type.py
backend/services/: download.py  info.py  playlist.py  settings.py
frontend/: .fvmrc  .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/models/: video_item.dart
frontend/lib/screens/: home_screen.dart  settings_screen.dart
frontend/lib/screens/home_screen/: input_view.dart  results_view.dart
frontend/lib/services/: backend_manager.dart  youtube_api.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: video_item.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/models/: video_item.dart
lib/screens/: home_screen.dart
lib/services/: youtube_api.dart
lib/widgets/: list_item.dart  list_item_download_overlay.dart  list_item_skeleton.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
scripts/: build_windows.bat  run.bat  run.sh
