[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yeeyeeeyee <aagg50211@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.16"
fastapi = "^0.138.2"
uvicorn = "^0.49.0"
yt-dlp = "^2026.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
